fix: ajust on z-index

--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -78,6 +78,7 @@
 		background-color: var(--blue);
 		text-align: center;
     padding-top: 50px;
+    z-index: 999;
   }
 
   .nav-list li {
